GNOME Bugzilla – Bug 685554
Assertion failure when trying to cancel an already started gesture
Last modified: 2012-10-10 19:14:05 UTC
clutter_gesture_action_cancel() currently asserts that `!action->priv->in_gesture' before cancelling the gesture. Given that we can cancel an already started gesture from a callback by returning FALSE, I don't see any reason why we can't explicitly cancel a gesture in any moment. Relatedly, the ::gesture-cancel is emitted even if the gesture has not passed the "prepare" state. Should I update the patch to prevent spurious ::gesture-cancel events?
Created attachment 225872 [details] [review] gesture-action: Make _cancel() callable after the gesture has started
Created attachment 225874 [details] [review] gesture-action: Make _cancel() callable after the gesture has started Handle the corner-case where _cancel() is called during gesture_prepare(). It that's the case, do not emit the ::gesture-begin signal.
Review of attachment 225874 [details] [review]: looks good to me. please, push to master and cherry-pick on the clutter-1.12 branch
Attachment 225874 [details] pushed as 1eaa577 - gesture-action: Make _cancel() callable after the gesture has started