gesture-action: Make _cancel() callable after the gesture has started

https://bugzilla.gnome.org/show_bug.cgi?id=685554